monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0279/A0279.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0279;

grammar A0279 {

  symbol A = Name*;

  B = A;

}
